--- a/RideHailingApp.Android/Properties/AndroidManifest.xml
+++ b/RideHailingApp.Android/Properties/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.ridehailingapp">
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
     <application android:label="RideHailingApp.Android" android:theme="@style/MainTheme">
-		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCYwugdl9cmAByLmw1fgjoDFa3t_pbEt9Y" />
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="Enter your google API key here" />
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 		<uses-library android:name="org.apache.http.legacy" android:required="false" />
 	</application>
